cluster/apps/ingress/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.15.1.3/32,65.108.91.184/32
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo.spacemule.net
    secretName: argo-tls-secret
  rules:
  - host: argo.spacemule.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
