cluster/apps/ingress/jellyfin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jelly-ingress
  namespace: wireguard
spec:
  ingressClassName: nginx
  rules:
  - host: jelly.spacemule.net
    http:
      paths:
      - path: /.well-known
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy-service
            port:
              number: 80
  - host: jelly-test.spacemule.net
    http:
      paths:
        - path: /.well-known
          pathType: Prefix
          backend:
            service:
              name: nginx-proxy-service
              port:
                number: 80
