cluster/apps/ingress/nginx-spacemule-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-spacemule-ingress
  namespace: nginx-static
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - spacemule.net
    - www.spacemule.net
    secretName: spacemule-net-secret
  rules:
  - host: spacemule.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-spacemule-service
            port:
              number: 8081
  - host: www.spacemule.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-spacemule-service
              port:
                number: 8081
