cluster/apps/ingress/syncthing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  namespace: syncthing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sync.spacemule.net
    secretName: syncthing-secret
  rules:
  - host: sync.spacemule.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing-gui-service
            port:
              number: 8081
