cluster/apps/ingress/transmission.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  namespace: external-services
spec:
  ingressClassName: nginx
  rules:
  - host: transmission.spacemule.net
    http:
      paths:
      - path: /.well-known
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 80
